--- a/_utilities.pull.scss
+++ b/_utilities.pull.scss
@@ -14,7 +14,7 @@
 // Options
 
 $iota-pull            : true;
-$iota-pull-namespace  : pull;
+$iota-pull-namespace  : 'pull-';
 $iota-pull--res       : false !default;
 
 
@@ -24,7 +24,7 @@ $iota-pull--res       : false !default;
 
   @for $i from 1 through ($column-size - 1) {
 
-    .#{$iota-utility-namespace}#{$iota-pull-namespace}-#{$i}\/#{$column-size} {
+    .#{$iota-utility-namespace}#{$iota-pull-namespace}#{$i}\/#{$column-size} {
       margin-right: ((100 / $column-size) * $i) * 1% !important;
     }
 
@@ -47,7 +47,7 @@ $iota-pull--res       : false !default;
 
         @for $i from 1 through ($column-size - 1) {
 
-          .#{$iota-utility-namespace}#{$iota-pull-namespace}-#{$i}\/#{$column-size}\@#{$name} {
+          .#{$iota-utility-namespace}#{$iota-pull-namespace}#{$i}\/#{$column-size}\@#{$name} {
             margin-right: ((100 / $column-size) * $i) * 1% !important;
           }
 
@@ -58,3 +58,5 @@ $iota-pull--res       : false !default;
     }
 
   }
+
+}
