uses tools.core new methods

--- a/_utilities.pull.scss
+++ b/_utilities.pull.scss
@@ -30,9 +30,10 @@ $iota-utils-pull-var-pull: $iota-global-utilities-namespace + $iota-utils-pull-n
 @each $column-size in $iota-utils-pull-columns {
 
   @for $i from 1 through ($column-size - 1) {
+    $margin-size: ((100 / $column-size) * $i) * 1%;
 
     .#{$iota-utils-pull-var-pull + $i + $iota-utils-pull-delimiter + $column-size} {
-      margin-#{_iota-direction('right')}: ((100 / $column-size) * $i) * 1% !important;
+      @include _iota-directional-property('margin', null, null $margin-size null null, true);
     }
 
   }
@@ -53,9 +54,10 @@ $iota-utils-pull-var-pull: $iota-global-utilities-namespace + $iota-utils-pull-n
       @each $column-size in $iota-utils-pull-columns {
 
         @for $i from 1 through ($column-size - 1) {
+          $margin-size: ((100 / $column-size) * $i) * 1%;
 
           .#{$iota-utils-pull-var-pull + $i + $iota-utils-pull-delimiter + $column-size + $iota-global-breakpoint-separator + $breakpoint-name} {
-            margin-#{_iota-direction('right')}: ((100 / $column-size) * $i) * 1% !important;
+            @include _iota-directional-property('margin', null, null $margin-size null null, true);
           }
 
         }
